slideshow fix; unecessary scrollbar on project pages fix (100vh -> 98vh bc bottom scrollbar)

--- a/src/css/_partials/art.scss
+++ b/src/css/_partials/art.scss
@@ -8,14 +8,10 @@
 .art-cover-container {
     position: relative;
     width: 100%;
-    height: 100%;
-    overflow-x: hidden;
 }
 
-.art-cover {
+.art-cover-old {
     position: absolute;
-    width: inherit;
-    height: auto;
     left: 0;
     top: 0;
 }
