--- a/src/css/_partials/text.scss
+++ b/src/css/_partials/text.scss
@@ -4,3 +4,8 @@ a:active,
 a:focus {
     text-decoration: none;
 }
+
+.copyright {
+    color: gray;
+    width: 200px;
+}
