--- a/src/css/_vender/_startbootstrap-simple-sidebar.scss
+++ b/src/css/_vender/_startbootstrap-simple-sidebar.scss
@@ -71,9 +71,6 @@
     margin-left: -$sidebar-width;
     overflow-y: auto;
     background: $base-background;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
 
@@ -83,7 +80,7 @@
 
 #page-content-wrapper {
     width: 100%;
-    height: 100%;
+    // height: 100%;
     position: absolute;
     padding: $topbar-height $base-padding-sm $base-padding-sm $base-padding-sm;
 }
